--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.0.0",
     "@supabase/supabase-js": "^2.90.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
